--- a/app/templates/components/create-item.hbs
+++ b/app/templates/components/create-item.hbs
@@ -11,7 +11,7 @@
 
   {{else}}
     <button {{action 'editing'}} class='btn btn-primary'>
-      Add item to list {{listId}}
+      Add item to list
     </button>
   {{/if}}
 
