--- a/app/templates/components/trello-list.hbs
+++ b/app/templates/components/trello-list.hbs
@@ -1,5 +1,6 @@
-<div class='col-md-4'>
-  <div id='list-{{list.id}}' class='todo-list panel panel-primary'>
+<!-- https://mdbootstrap.com/components/panels/ -->
+<div class='col-sm-4'>
+  <div id='list-{{list.id}}' class='trello-list panel panel-primary'>
     <div class='panel-heading'>
       {{list.name}}
       <div class='pull-right delete' {{action 'deleteList' list}}>
