--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -64,7 +64,7 @@ html {
 }
 
 #details-view .name-change {
-  height: 20px;
+  height: 4vh;
 }
 
 .trello-list {
@@ -73,8 +73,6 @@ html {
 
 .modal-fade {
   background: rgba(0, 0, 0, 0.5);
-  position: absolute;
-  width: 100%;
   height: 100%;
 }
 
@@ -87,14 +85,9 @@ html {
 }
 
 .modal-title {
-  position: absolute;
-  top: 0;
-  width: 100%;
   height:6vh;
-  text-align: center;
-  border-bottom: 2px solid black;
   font-weight: bold;
-  text-transform: uppercase;
+  text-transform: capitalize;
   background-color: #fb9fa4;
   color: #fff;
 }
@@ -103,7 +96,16 @@ html {
   color: #965f62;
 }
 
-.modal-body {
-  margin-top: 6vh;
+
+// https://stackoverflow.com/questions/14820952/change-bootstrap-input-focus-blue-glow
+.form-control:focus {
+  border-color: none;
+  box-shadow: none;
+  -webkit-box-shadow: none;
 }
 
+button:focus {
+  border-color: none;
+  box-shadow: none;
+  -webkit-box-shadow: none;
+}
