--- a/app/templates/components/details-view.hbs
+++ b/app/templates/components/details-view.hbs
@@ -1,26 +1,26 @@
 <!-- https://v4-alpha.getbootstrap.com/components/modal/ -->
 <div id='details-view'>
   <div {{action 'toggleModal'}} class='modal-fade'></div>
-  <div class='panel panel-info modal-box'>
-    <div class='panel-heading modal-title'>
-      <div class='pull-left'>
-        {{#if editName}}
-          <form {{action 'editItemName' newItem selectedItem.id on='submit'}}
-            id='newTitle'>
-            {{input class='name-change form-control' value=newItem.name placeholder='Item name'}}
-            </form>
-        {{else}}
-          <span {{action 'toggleEdit' 'name'}}>{{selectedItem.name}}</span>
-        {{/if}}
+    <div class='panel panel-info modal-box'>
+      <div class='panel-heading modal-title'>
+        <div class='pull-left'>
+          {{#if editName}}
+            <form {{action 'editItemName' newItem selectedItem.id on='submit'}}
+              id='newTitle'>
+              {{input class='name-change form-control' value=newItem.name placeholder='Item name'}}
+              </form>
+          {{else}}
+            <span {{action 'toggleEdit' 'name'}}>{{selectedItem.name}}</span>
+          {{/if}}
+        </div>
+        <div class='pull-right'>
+          <span {{action 'deleteItem' selectedItem}} class='button'>Delete</span>
+          <span {{action 'toggleModal' selectedItem}} class='button'>Close</span>
+        </div>
       </div>
-      <div class='pull-right'>
-        <span {{action 'deleteItem' selectedItem}} class='button'>Delete</span>
-        <span {{action 'toggleModal' selectedItem}} class='button'>Close</span>
-      </div>
-    </div>
 
     <div class='panel-body modal-body'>
-      <p><i>Click the name above or description below to edit</i></p>
+      <p><i>Click the name or description to edit</i></p>
 
       {{#if editDescription}}
         <form {{action 'editItemDescription' newItem selectedItem.id on='submit'}}>
