--- a/app/templates/components/create-list.hbs
+++ b/app/templates/components/create-list.hbs
@@ -4,6 +4,8 @@
       <div class="panel-body">
         <form id="newList">
           <p>
+          <!-- input for new lists name  -->
+
             {{input value=newList.name placeholder="Enter new list name" class='form-control'}}
           </p>
           <p>
